--- a/app/src/main/res/layout/fragment_my_transactions.xml
+++ b/app/src/main/res/layout/fragment_my_transactions.xml
@@ -1,13 +1,199 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/grey_gradient_bg"
     tools:context="com.iqmojo.iq_mojo.ui.fragments.MyTransactionsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_alignParentTop="true"
+       android:layout_marginTop="@dimen/padding_30"
+       android:id="@+id/llyProfile"
+       android:gravity="center"
+       android:orientation="vertical">
 
-</FrameLayout>
+      <LinearLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:gravity="center_vertical"
+          android:orientation="horizontal"
+          android:weightSum="10">
+
+         <View
+             android:layout_width="0dp"
+             android:layout_height="1dp"
+             android:layout_weight="5"
+             android:background="@color/grey_text_color" />
+
+         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:id="@+id/profile_image"
+             android:layout_width="100dp"
+             android:layout_height="100dp"
+             android:src="@drawable/profile_pic"
+             app:civ_border_color="@color/grey_text_color"
+             app:civ_border_width="1dp" />
+
+         <View
+             android:layout_width="0dp"
+             android:layout_height="1dp"
+             android:layout_weight="5"
+             android:background="@color/grey_text_color" />
+
+      </LinearLayout>
+
+      <TextView
+          android:id="@+id/text_name"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="@dimen/margin_10"
+          android:text="Ramesh Kumar"
+          android:textSize="@dimen/profile_name_text_size"
+          android:typeface="monospace" />
+
+      <TextView
+          android:id="@+id/text_rupees"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="@dimen/margin_7"
+          android:drawableLeft="@drawable/pager_00_inactive"
+          android:drawablePadding="@dimen/margin_5"
+          android:text="125.26"
+          android:textSize="@dimen/profile_name"
+          android:typeface="monospace" />
+
+      <TextView
+          android:id="@+id/text_avail_bal"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="@dimen/margin_10"
+          android:text="@string/avail_bal"
+          android:textSize="@dimen/form_textsize"
+          android:typeface="monospace" />
+
+   </LinearLayout>
+
+
+   <RelativeLayout
+       android:id="@+id/relativeCredit"
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:layout_marginLeft="@dimen/margin_30dp"
+       android:layout_marginRight="@dimen/margin_30dp"
+       android:layout_marginTop="@dimen/margin_10"
+       android:background="@drawable/red_gradient_rounded_bg">
+
+      <ImageView
+          android:id="@+id/img_header"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentLeft="true"
+          android:layout_centerVertical="true"
+          android:paddingLeft="@dimen/margin_10"
+          android:src="@drawable/mojo_in" />
+
+      <TextView
+          android:id="@+id/txt_header"
+          android:layout_width="wrap_content"
+          android:layout_height="50dp"
+          android:text="Mojo In"
+          android:textColor="@color/white"
+          android:textSize="@dimen/app_text_size"
+          android:layout_toRightOf="@+id/img_header"
+          android:gravity="center_vertical"
+          android:typeface="monospace"
+          android:layout_centerVertical="true"
+          android:layout_marginLeft="@dimen/margin_20"
+          android:visibility="visible" />
+
+      <TextView
+          android:id="@+id/txt_amountCredit"
+          android:layout_width="wrap_content"
+          android:layout_height="50dp"
+          android:layout_alignParentRight="true"
+          android:layout_centerHorizontal="true"
+          android:layout_centerInParent="true"
+          android:layout_marginBottom="@dimen/margin_30dp"
+          android:layout_marginRight="@dimen/margin_10"
+          android:elevation="@dimen/padding_5"
+          android:gravity="center"
+          android:text="123.23"
+          android:textColor="@color/white"
+          android:textSize="@dimen/app_text_size"
+          android:typeface="monospace"
+          android:visibility="visible" />
+
+   </RelativeLayout>
+
+
+   <ListView
+       android:id="@+id/listCredit"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_marginLeft="@dimen/margin_30dp"
+       android:layout_marginRight="@dimen/margin_30dp"></ListView>
+
+
+   <RelativeLayout
+       android:id="@+id/relativeDebit"
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:layout_marginLeft="@dimen/margin_30dp"
+       android:layout_marginRight="@dimen/margin_30dp"
+       android:layout_marginTop="@dimen/margin_10"
+       android:background="@drawable/red_gradient_rounded_bg">
+
+      <ImageView
+          android:id="@+id/img_headerdebit"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentLeft="true"
+          android:layout_centerVertical="true"
+          android:paddingLeft="@dimen/margin_10"
+          android:src="@drawable/mojo_out" />
+
+      <TextView
+          android:id="@+id/txt_headerdebit"
+          android:layout_width="wrap_content"
+          android:layout_height="50dp"
+          android:text="Mojo Out"
+          android:textColor="@color/white"
+          android:textSize="@dimen/app_text_size"
+          android:layout_toRightOf="@+id/img_headerdebit"
+          android:gravity="center_vertical"
+          android:typeface="monospace"
+          android:layout_centerVertical="true"
+          android:layout_marginLeft="@dimen/margin_20"
+          android:visibility="visible" />
+
+      <TextView
+          android:id="@+id/txt_amountdebit"
+          android:layout_width="wrap_content"
+          android:layout_height="50dp"
+          android:layout_alignParentRight="true"
+          android:layout_centerHorizontal="true"
+          android:layout_centerInParent="true"
+          android:layout_marginBottom="@dimen/margin_30dp"
+          android:layout_marginRight="@dimen/margin_10"
+          android:elevation="@dimen/padding_5"
+          android:gravity="center"
+          android:text="123.23"
+          android:textColor="@color/white"
+          android:textSize="@dimen/app_text_size"
+          android:typeface="monospace"
+          android:visibility="visible" />
+
+   </RelativeLayout>
+
+
+   <ListView
+       android:id="@+id/listDebit"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_marginLeft="@dimen/margin_30dp"
+       android:layout_marginRight="@dimen/margin_30dp"></ListView>
+
+
+</LinearLayout>
