--- a/app/src/main/res/layout/activity_add_coins_details.xml
+++ b/app/src/main/res/layout/activity_add_coins_details.xml
@@ -103,7 +103,7 @@
                 android:layout_marginLeft="@dimen/margin_15"
                 android:paddingLeft="@dimen/padding_15"
                 android:text="50 Coins"
-                android:drawableLeft="@drawable/pager_00_active"
+                android:drawableLeft="@drawable/iq_add_icon"
                 android:drawablePadding="@dimen/margin_10"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/text_size_20sp"
@@ -146,7 +146,7 @@
                 android:layout_marginLeft="@dimen/margin_15"
                 android:paddingLeft="@dimen/padding_15"
                 android:text="100 Coins"
-                android:drawableLeft="@drawable/pager_00_active"
+                android:drawableLeft="@drawable/iq_add_icon"
                 android:drawablePadding="@dimen/margin_10"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/text_size_20sp"
@@ -191,7 +191,7 @@
                 android:layout_marginLeft="@dimen/margin_15"
                 android:paddingLeft="@dimen/padding_15"
                 android:text="250 Coins"
-                android:drawableLeft="@drawable/pager_00_active"
+                android:drawableLeft="@drawable/iq_add_icon"
                 android:drawablePadding="@dimen/margin_10"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/text_size_20sp"
