--- a/app/src/main/res/layout/fragment_my_transactions.xml
+++ b/app/src/main/res/layout/fragment_my_transactions.xml
@@ -75,7 +75,6 @@
 
    </LinearLayout>
 
-
    <RelativeLayout
        android:id="@+id/relativeCredit"
        android:layout_width="match_parent"
@@ -116,7 +115,7 @@
           android:layout_centerHorizontal="true"
           android:layout_centerInParent="true"
           android:layout_marginBottom="@dimen/margin_30dp"
-          android:layout_marginRight="@dimen/margin_10"
+          android:layout_marginRight="@dimen/margin_15"
           android:elevation="@dimen/padding_5"
           android:gravity="center"
           android:text="123.23"
@@ -125,8 +124,63 @@
           android:typeface="monospace"
           android:visibility="visible" />
 
+
    </RelativeLayout>
 
+   <LinearLayout
+       android:id="@+id/rlCreditHeader"
+       android:layout_width="match_parent"
+       android:layout_height="40dp"
+       android:visibility="gone"
+       android:background="@drawable/red_circular_txn_header"
+       android:layout_marginRight="@dimen/margin_40dp"
+       android:layout_marginLeft="@dimen/margin_40dp"
+       android:gravity="center"
+       >
+
+      <TextView
+          android:layout_width="0dp"
+          android:layout_weight="33"
+          android:layout_height="wrap_content"
+          android:textColor="@color/white"
+          android:textSize="@dimen/app_text_size"
+          android:typeface="monospace"
+          android:layout_alignParentLeft="true"
+          android:text="@string/date"
+          android:gravity="left|center"
+          android:layout_centerVertical="true"
+          android:paddingLeft="@dimen/margin_10"
+
+          />
+
+
+      <TextView
+          android:layout_width="0dp"
+          android:layout_weight="33"
+          android:layout_height="wrap_content"
+          android:textColor="@color/white"
+          android:textSize="@dimen/app_text_size"
+          android:typeface="monospace"
+          android:layout_centerInParent="true"
+          android:gravity="left|center"
+          android:text="@string/activity"
+          />
+
+      <TextView
+          android:layout_width="0dp"
+          android:layout_weight="33"
+          android:layout_height="wrap_content"
+          android:textColor="@color/white"
+          android:textSize="@dimen/app_text_size"
+          android:typeface="monospace"
+          android:text="@string/amount_header"
+          android:layout_centerVertical="true"
+          android:layout_alignParentRight="true"
+          android:paddingRight="@dimen/margin_10"
+          android:gravity="left|center"
+          />
+
+   </LinearLayout>
 
    <ListView
        android:id="@+id/listCredit"
@@ -187,6 +241,61 @@
           android:visibility="visible" />
 
    </RelativeLayout>
+
+   <LinearLayout
+       android:id="@+id/rlDebitHeader"
+       android:layout_width="match_parent"
+       android:layout_height="40dp"
+       android:visibility="gone"
+       android:background="@drawable/red_circular_txn_header"
+       android:layout_marginRight="@dimen/margin_40dp"
+       android:layout_marginLeft="@dimen/margin_40dp"
+      android:gravity="center">
+
+      <TextView
+          android:layout_width="0dp"
+          android:layout_weight="33"
+          android:gravity="left"
+          android:layout_height="wrap_content"
+          android:textColor="@color/white"
+          android:textSize="@dimen/app_text_size"
+          android:typeface="monospace"
+          android:layout_alignParentLeft="true"
+          android:text="@string/date"
+          android:layout_centerVertical="true"
+          android:paddingLeft="@dimen/margin_10"
+
+          />
+
+
+      <TextView
+          android:layout_width="0dp"
+          android:layout_weight="33"
+          android:gravity="left"
+          android:layout_height="wrap_content"
+          android:textColor="@color/white"
+          android:textSize="@dimen/app_text_size"
+          android:typeface="monospace"
+          android:layout_centerInParent="true"
+          android:text="@string/activity"
+          />
+
+      <TextView
+          android:layout_width="0dp"
+          android:layout_weight="33"
+          android:gravity="left"
+          android:layout_height="wrap_content"
+          android:textColor="@color/white"
+          android:textSize="@dimen/app_text_size"
+          android:typeface="monospace"
+          android:text="@string/amount_header"
+          android:layout_centerVertical="true"
+          android:layout_alignParentRight="true"
+          android:paddingRight="@dimen/margin_10"
+
+          />
+
+   </LinearLayout>
 
 
    <ListView
