--- a/app/src/main/res/layout/transaction_list_childs.xml
+++ b/app/src/main/res/layout/transaction_list_childs.xml
@@ -5,13 +5,14 @@
     android:padding="@dimen/padding_5">
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textDate"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="33"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/app_text_size"
@@ -25,27 +26,32 @@
 
         <TextView
             android:id="@+id/textActivity"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="33"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/app_text_size"
             android:typeface="monospace"
             android:layout_centerInParent="true"
-            android:text=""
+            android:gravity="left"
+            android:text="acv"
             />
 
         <TextView
             android:id="@+id/textAmount"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="33"
+            android:gravity="left"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/app_text_size"
             android:typeface="monospace"
-            android:text=""
+            android:text="123"
+            android:layout_centerInParent="true"
             android:layout_alignParentRight="true"
             android:paddingRight="@dimen/margin_10"
 
             />
 
-    </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
