--- a/app/src/main/res/drawable/transaction_red_bg.xml
+++ b/app/src/main/res/drawable/transaction_red_bg.xml
@@ -3,12 +3,11 @@
 
     <gradient
         android:angle="270"
-        android:endColor="@color/colorPrimaryDark"
+        android:endColor="@color/colorPrimary"
         android:startColor="@color/colorPrimaryDark"
         android:type="linear" />
 
     <corners
-        android:bottomRightRadius="6dp"
-        android:bottomLeftRadius="6dp"/>
+        android:radius="5dp"/>
 
 </shape>
