--- a/app/src/main/res/layout/fragment_my_transactions.xml
+++ b/app/src/main/res/layout/fragment_my_transactions.xml
@@ -84,70 +84,79 @@
 
             </LinearLayout>
 
-
             <RelativeLayout
-                android:id="@+id/relativeCredit"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginLeft="@dimen/margin_30dp"
-                android:layout_marginRight="@dimen/margin_30dp"
-                android:layout_marginTop="@dimen/margin_10"
-                android:background="@drawable/red_gradient_rounded_bg">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_10">
 
-                <ImageView
-                    android:id="@+id/img_header"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:paddingLeft="@dimen/margin_15"
-                    android:src="@drawable/mojo_in" />
-
-                <TextView
-                    android:id="@+id/txt_header"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:id="@+id/relativeCredit"
+                    android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/margin_25dp"
-                    android:layout_toRightOf="@+id/img_header"
-                    android:gravity="center_vertical"
-                    android:text="Mojo In"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/form_textsize"
-                    android:typeface="serif"
-                    android:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/txt_amountCredit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerInParent="true"
-                    android:layout_marginBottom="@dimen/margin_30dp"
+                    android:layout_marginLeft="@dimen/margin_30dp"
                     android:layout_marginRight="@dimen/margin_30dp"
-                    android:gravity="center"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/form_textsize"
-                    android:typeface="serif"
-                    android:visibility="visible" />
+                    android:background="@drawable/transaction_red_bg">
+
+                    <ImageView
+                        android:id="@+id/img_header"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:paddingLeft="@dimen/margin_15"
+                        android:src="@drawable/mojo_in" />
+
+                    <TextView
+                        android:id="@+id/txt_header"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/margin_25dp"
+                        android:layout_toRightOf="@+id/img_header"
+                        android:gravity="center_vertical"
+                        android:text="Mojo In"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/drawer_text_size"
+                        android:typeface="serif"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/txt_amountCredit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="@dimen/margin_30dp"
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/drawer_text_size"
+                        android:typeface="serif"
+                        android:visibility="visible" />
 
 
-                <ImageView
-                    android:id="@+id/imageArrowCredit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/arrow"
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="@dimen/margin_10"/>
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"
+                    android:background="@drawable/round_circle_with_border">
 
+                    <ImageView
+                        android:id="@+id/imageArrowCredit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/arrow" />
+                </RelativeLayout>
             </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/rlCreditHeader"
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="33dp"
                 android:layout_marginLeft="@dimen/margin_45dp"
                 android:layout_marginRight="@dimen/margin_45dp"
                 android:background="@drawable/red_circular_txn_header"
@@ -166,6 +175,10 @@
 
                     />
 
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:background="#eeeeee"/>
 
                 <TextView
                     android:layout_width="0dp"
@@ -176,6 +189,11 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/app_text_size"
                     android:typeface="monospace" />
+
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:background="#eeeeee"/>
 
                 <TextView
                     android:layout_width="0dp"
@@ -199,69 +217,81 @@
                 android:dividerHeight="0.5dp"
                 android:visibility="visible" />
 
-
             <RelativeLayout
-                android:id="@+id/relativeDebit"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginLeft="@dimen/margin_30dp"
-                android:layout_marginRight="@dimen/margin_30dp"
-                android:layout_marginTop="@dimen/margin_10"
-                android:background="@drawable/red_gradient_rounded_bg">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_12">
 
-                <ImageView
-                    android:id="@+id/img_headerdebit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:paddingLeft="@dimen/margin_15"
-                    android:src="@drawable/mojo_out" />
-
-                <TextView
-                    android:id="@+id/txt_headerdebit"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:id="@+id/relativeDebit"
+                    android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/margin_25dp"
-                    android:layout_toRightOf="@+id/img_headerdebit"
-                    android:gravity="center_vertical"
-                    android:text="Mojo Out"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/form_textsize"
-                    android:typeface="serif"
-                    android:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/txt_amountdebit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerInParent="true"
-                    android:layout_marginBottom="@dimen/margin_30dp"
+                    android:layout_marginLeft="@dimen/margin_30dp"
                     android:layout_marginRight="@dimen/margin_30dp"
-                    android:gravity="center"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/form_textsize"
-                    android:typeface="serif"
-                    android:visibility="visible" />
+                    android:background="@drawable/transaction_red_bg">
 
-                <ImageView
-                    android:id="@+id/imageArrowDebit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/arrow"
+                    <ImageView
+                        android:id="@+id/img_headerdebit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:paddingLeft="@dimen/margin_15"
+                        android:src="@drawable/mojo_out" />
+
+                    <TextView
+                        android:id="@+id/txt_headerdebit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/margin_25dp"
+                        android:layout_toRightOf="@+id/img_headerdebit"
+                        android:gravity="center_vertical"
+                        android:text="Mojo Out"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/drawer_text_size"
+                        android:typeface="serif"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/txt_amountdebit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="@dimen/margin_30dp"
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/drawer_text_size"
+                        android:typeface="serif"
+                        android:visibility="visible" />
+
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="@dimen/margin_10"/>
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"
+                    android:background="@drawable/round_circle_with_border">
 
+                    <ImageView
+                        android:id="@+id/imageArrowDebit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/arrow" />
+                </RelativeLayout>
             </RelativeLayout>
+
 
             <LinearLayout
                 android:id="@+id/rlDebitHeader"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="33dp"
                 android:layout_marginLeft="@dimen/margin_45dp"
                 android:layout_marginRight="@dimen/margin_45dp"
                 android:background="@drawable/red_circular_txn_header"
@@ -279,6 +309,10 @@
                     android:typeface="monospace"
 
                     />
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:background="#eeeeee"/>
 
 
                 <TextView
@@ -290,6 +324,10 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/app_text_size"
                     android:typeface="monospace" />
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:background="#eeeeee"/>
 
                 <TextView
                     android:layout_width="0dp"
