--- a/app/src/main/res/layout/transaction_list_childs.xml
+++ b/app/src/main/res/layout/transaction_list_childs.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/padding_12">
+    android:paddingTop="@dimen/padding_12"
+    android:paddingBottom="@dimen/padding_5">
 
 
     <LinearLayout
